--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,6 @@ dependencyResolutionManagement {
 	}
 }
 rootProject.name = "GPO-Android"
-include ':app'
+include ':presentation'
+include ':domain'
+include ':data'
